add chroniclemap jdk17 params
Signed-off-by: Gino Augustine <ginoaugustine@gmail.com>